// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssnUlrichLinkTemplate component should render a value 1`] = `
<Fragment>
  <WithStyles(Typography)
    component="span"
    variant="body2"
  >
    <span>
      1234-1234
    </span>
     
    <WithStyles(ExternalLink)
      aria-label="View Ulrichs information in a new window"
      href="http://example.com/ulrichs?id=1234"
    >
      <i>
        Architectural Journal
      </i>
       
       on Ulrichs
    </WithStyles(ExternalLink)>
  </WithStyles(Typography)>
</Fragment>
`;

exports[`IssnUlrichLinkTemplate component should render default view 1`] = `
<Fragment>
  <WithStyles(Typography)
    component="span"
    variant="body2"
  >
    <span />
     
  </WithStyles(Typography)>
</Fragment>
`;

exports[`IssnUlrichLinkTemplate component should skip a missing ulrichs 1`] = `
<Fragment>
  <WithStyles(Typography)
    component="span"
    variant="body2"
  >
    <span>
      1235-1235
    </span>
     
  </WithStyles(Typography)>
</Fragment>
`;
